--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,17 +9,23 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".View_Today_Habits"
+            android:name=".MainView"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:noHistory="false"
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MakeHabit"></activity>
-        <activity android:name=".EditHabit"></activity>
+        <activity
+            android:name=".MakeHabit"
+            android:noHistory="false" />
+        <activity
+            android:name=".EditHabit"
+            android:noHistory="false" />
+        <activity android:name=".History" />
     </application>
 
 </manifest>
